Refine PDF layout/flow for Part VI

--- a/content/viii-posters/41.md
+++ b/content/viii-posters/41.md
@@ -32,9 +32,9 @@ Documentation has been integral to conservation practice at BkM since the depart
 
 Archival research has provided valuable insights into BkM treatment methods absent in the documentation. In 1954 and 1962, Sheldon and Caroline produced two films for a general audience, both of which illustrate the complex operation of performing a wax-resin lining. The earlier film features a lining executed with a hand iron ([fig. 41.1](#fig-41-1)) ({% cite 'Keck and Keck 1954' %}), and in the later one, conservators demonstrate the use of a vacuum hot table ([fig. 41.2](#fig-41-2)) ({% cite 'Keck and Keck 1962' %}). In both films, the narration illuminates the reasoning behind each action and material selected. The filmed processes are remarkably consistent with physical evidence of lining observed on many paintings in the collection, such as paper residues on the tacking margins or brush marks and fingerprints on the versos of paintings lined by hand.
 
-{% figure 'fig-41-1' %}
+{% figure 'fig-41-1' 'pdf-float-top pdf-no-bottom-border' %}
 
-{% figure 'fig-41-2' %}
+{% figure 'fig-41-2' 'pdf-float-top' %}
 
 ## Methodology
 
