--- a/content/viii-posters/43.md
+++ b/content/viii-posters/43.md
@@ -18,11 +18,11 @@ In the fall of 2018, the Arkansas Arts Center’s *Adoration of the Shepherds*, 
 
 {% figure 'fig-43-1' %}
 
-{% figure 'fig-43-2' %}
+{% figure 'fig-43-2' 'pdf-float-top pdf-no-bottom-border' %}
 
 The lining has several characteristics that point to an Italian method of canvas lining. Although the original canvas has a fine weave, approximately 30 × 30 threads per inch, the lining has a very open, plain weave with approximately 16 × 16 threads per inch. The canvas is composed of threads with irregular widths ([fig. 43.3](#fig-43-3)), and the lining overall was adhered with a thin layer of glue-paste adhesive. Clues from the painting’s provenance were quite limited, leading back only to the dealer who sold it to the Kress Foundation in 1930; this was Florentine dealer Count Alessandro Contini-Bonacossi, who supplied many paintings to Samuel H. Kress ({% cite 'Shapley 1973' %}). It is therefore likely the lining was applied in Italy before the painting was sold, though it is unknown where it might have been done, or by whom.
 
-{% figure 'fig-43-3' %}
+{% figure 'fig-43-3' 'pdf-float-top' %}
 
 ## Roman versus Florentine Lining Canvases
 
