--- a/content/viii-posters/44.md
+++ b/content/viii-posters/44.md
@@ -71,7 +71,7 @@ Lining is a six-step process.
 
 </div>
 
-## Advantages of the System
+## Advantages of the System {.pdf-page-break-before}
 
 The BACC system has a number of advantages.
 
