--- a/content/viii-posters/45.md
+++ b/content/viii-posters/45.md
@@ -26,9 +26,13 @@ Material evidence found in four paintings by Jacob Jordaens (1593–1678) in the
 
 Technical examination revealed that though the paintings were in different states of condition, they had aged in identical environments and received similar restoration treatments, including wax-resin linings in 1963 ({% cite 'van Eikema Hommes and Froment 2011' %}). Differing degrees of darkness were particularly striking ([figs. 45.2](#fig-45-2), [45.3](#fig-45-3)).
 
-{% figure 'fig-45-2' %}
+<div class="no-break-container pdf-float-top">
+
+{% figure 'fig-45-2' 'pdf-no-bottom-border' %}
 
 {% figure 'fig-45-3' %}
+
+</div>
 
 Analysis of cross sections from each of the paintings highlighted the use of different ground types that varied in both the number of layers and material composition as well as the type of binding medium. The correlation between material evidence and documentary sources that report color change in paintings after wax-resin lining supported the hypothesis that the visual consequence of wax-resin linings in seventeenth-century Netherlandish paintings is related to the original preparation technique.
 
