--- a/content/viii-posters/46.md
+++ b/content/viii-posters/46.md
@@ -30,13 +30,13 @@ After consulting the first published book on weaving ({% cite 'Ziegler 1677' %})
 
 All reconstructions were then woven in linen on a dobby loom.
 
-## The Project Goal
+## The Project Goal {.pdf-column-break-before}
 
 Lab O, a laboratory for handwoven canvas located in Odemira, Portugal, was founded to deepen the technical and practical knowledge of historical canvases and to promote their analysis, authentication, and conservation. The work at Lab O connects craft, entrepreneurship, technology, science, and art history.
 
 The research and reconstruction of canvases contributes to the understanding of technical painting and art history and brings attention to an understudied aspect of textile production during the period that an artwork was created. Canvas reconstruction enables new research and may provide insight into why old masters used these supports, as well as how and when these textiles were made.
 
-### El Greco
+### El Greco {.pdf-column-break-before}
 
 {% figuregroup '2' 'fig-46-1-a, fig-46-1-b, fig-46-1-c, fig-46-1-d' '**Figure 46.1** El Greco (Greek, 1541–1614), *The Burial of the Count of Orgaz*, 1586. Oil on canvas, 480 × 360 cm (189 × 141 3/4 in.). (a) Piece of original canvas showing weave pattern. (b) Weave draft (de los Rios y Rojas and Socorro 1977). &#40;c) Computer-generated weave draft. (d) Handwoven reconstruction of the canvas. Images: (a and b) de los Rios y Rojas and Socorro 1977, &#40;c) Lab O, (d) Lab O / João Mariano' %}
 
