--- a/content/viii-posters/50.md
+++ b/content/viii-posters/50.md
@@ -36,7 +36,7 @@ As a first step, interviews on the composition of wax resin and the ways in whic
 
 [Figure 50.1](#fig-50-1) shows various recipes of wax resin obtained through the interviews and the related bibliographic surveys. Wax-resin linings were introduced to Japan via two different routes: from Belgium’s Institut Royal du Patrimoine Artistique (Royal Institute for Cultural Heritage \[KIK-IRPA\]) and from the United States’ New York University (NYU).[^1] Most of the recipes used in Japan originated from Georges Messens’s recipe, used at KIK-IRPA. Tsuneyuki Morita and Mitsuhiko Kuroe studied under Messens ({% cite 'Kuroe 1969' %}, {% cite 'Kuroe 1975' '' '1975' %}),[^2] and they brought his recipe and method to Japan in the late 1960s.
 
-{% figure 'fig-50-1' %}
+{% figure 'fig-50-1' 'pdf-float-top' %}
 
 Morita and Kuroe said that it was difficult to get gum elemi at that time in Japan, so they had to find a substitute. One chose colophony because it strengthens the adhesive property and has excellent compatibility with beeswax. The other chose microcrystalline wax—the first synthetic material introduced for wax-resin lining in Japan. It appears that the mainstream wax-resin recipe in Japan then became 7 parts beeswax, 2 or 3 parts dammar resin, and 1 part microcrystalline wax. Most conservators continued to use wax resin for lining over the next two decades, but the modification of the lining adhesive recipe had already been completed in the 1970s. There were few who used ready-made wax resin, although it was available.
 
