--- a/content/viii-posters/53.md
+++ b/content/viii-posters/53.md
@@ -42,7 +42,7 @@ abstract: "The treatment of five large-scale paintings by Dutch artist Aart Scho
 
 The Menagerie van Prince Willem V series consists of five large-scale paintings by Dutch artist Aart Schouman (1710–1792) ([fig. 53.1](#fig-53-1)). Prince Willem V van Oranje-Nassau (1748–1806) commissioned the series for his private chambers in the Stadhouderlijk Kwartier, The Hague. The continuous landscapes depict Prince Willem’s private collection of exotic animals. Transferred to Palace Huis ten Bosch at an unknown date, they languished, rolled up and folded in the attic until their rediscovery in 1975.[^1] That same year, the paintings were restored by Nico van Bohemen Sr. and team, then installed in the palace.
 
-{% figure 'fig-53-1' %}
+{% figure 'fig-53-1' 'pdf-float-top' %}
 
 Unfortunately, little documentation of the 1975 treatment remains, but luckily one of the restorers, Nico van Bohemen Jr., was available to be interviewed as part of the current project and was happy to answer our questions.[^2] He had treated the paintings under the supervision of his father, Nico van Bohemen Sr., who was a successful self-taught restorer in The Hague. Van Bohemen Jr. recalled that the Schouman paintings were wax-resin lined using a mixture of raw, yellow beeswax and powdered resin and were lined on a vacuum hot table facedown on top of a sheet of Melinex.
 
@@ -84,7 +84,7 @@ To begin the relining, the lightweight HDPE plastic sheeet throughout was rolled
 
 Bands of glass-fiber interleaf were laid onto the painting’s reverse, slightly overlapping one another ([fig. 53.3](#fig-53-3)). The lining fabric was then rolled out on top of the interleaf, and the lightweight HDPE plastic sheet was repositioned ([fig. 53.4](#fig-53-4)). Before relining proceeded, a dry run ensured that the air would be evacuated quickly and evenly, and any irregularity in the structure was evaluated using raking light.
 
-{% figure 'fig-53-3' %}
+{% figure 'fig-53-3' 'pdf-no-bottom-border' %}
 
 {% figure 'fig-53-4' %}
 
