--- a/content/viii-posters/55.md
+++ b/content/viii-posters/55.md
@@ -25,7 +25,7 @@ The painting titled *The Crucifixion* originates from the neoclassical parish ch
 
 *The Crucifixion* was painted with oil paint on a primed linen canvas that was sewn together from two main and four additional smaller pieces. It was once mounted on a traditional wooden stretcher, which no longer existed at the time of the conservation. Due to the painting’s rapidly declining condition, numerous damaging alterations, and extensive overpaintings done throughout its history ([fig. 55.1](#fig-55-1)), the painting was removed from permanent display in the main altar during the second half of the twentieth century ({% cite 'Brykowski 1975' '239' %}). It was then kept in a storage room, where it was subjected to further decay, awaiting future conservation treatment.
 
-{% figure 'fig-55-1' %}
+{% figure 'fig-55-1' 'pdf-float-top' %}
 
 As the project of conserving and restoring *The Crucifixion* exceeded the capabilities of a small parish, in 2014 the painting was handed over to the collection of the Museum of John Paul II Catholic University of Lublin. It then became the subject of a joint master’s thesis executed at the Faculty of Conservation and Restoration of Works of Art at the Jan Matejko Academy of Fine Arts, Kraków, from 2015 to 2017 ({% cite 'Dobrzańska and Lentowicz 2017' %}).
 
@@ -33,11 +33,11 @@ As the project of conserving and restoring *The Crucifixion* exceeded the capabi
 
 The condition of the painting, which spent many years in the attic of a church, can be described as extremely poor ([fig. 55.2](#fig-55-2)). Many unprofessional conservation attempts contributed to the dismal state of the artwork. The original support was lined to a linen canvas with a starch-based adhesive. The lining was almost completely detached from the painting. Underneath the lining, an attempt at strip-lining was discovered; it had been done using a very coarse canvas and with a thick layer of rigid gluten glue and chalk gesso serving as an adhesive.
 
-{% figure 'fig-55-2' %}
+{% figure 'fig-55-2' 'pdf-float-top pdf-no-bottom-border' %}
 
 There were also numerous stratified fabric patches ([fig. 55.3](#fig-55-3), top) attached with beeswax to the back of the original canvas, which was also almost entirely covered with a black impregnating substance (most probably various oil paints and bitumen) (see [fig. 55.2](#fig-55-2)). In addition, the canvas support was torn in many places, and its parts were roughly sewn together with twine, pierced through the front of the painting and all its layers (see [fig. 55.3](#fig-55-3), bottom). The original paint and ground layers had poor adhesion to the canvas support, which resulted in many losses. The painting had been overpainted several times with thick layers of oil paint. The whole structure was rigid yet fragile, and seriously deformed.
 
-{% figure 'fig-55-3' %}
+{% figure 'fig-55-3' 'pdf-float-top' %}
 
 The main goal of the conservation was to remove all harmful transformations. This was essential in order to recover the original painting. It should be noted that none of the alterations carried any historic or artistic value. The major overpainting was done around 1945–46. After that, due to the painting’s poor condition, it was displayed only occasionally. All of the other repairs could only be interpreted as rather makeshift attempts at stabilizing the painting’s structure, and they undoubtedly were not executed by a professional.
 
@@ -61,7 +61,7 @@ It was decided that the conservation of *The Crucifixion* should be finalized wi
 
 {% figure 'fig-55-4' %}
 
-{% figure 'fig-55-5' %}
+{% figure 'fig-55-5' 'pdf-float-top' %}
 
 ## Verification of Authorship
 
