--- a/content/viii-posters/57.md
+++ b/content/viii-posters/57.md
@@ -41,7 +41,7 @@ PVB has been widely used in conservation practice in Russia since the 1950s ({% 
 
 For the issue of two-sided paintings, conservators from GOSNIIR offered this technique to attach new canvas strips thread-by-thread to the original supports of the pictures ({% cite 'Yashkina and Churakova 2013' %}). PVB is a polymer with strong, elastic films and stable properties ({% cite 'Sannikova 2018' %}), and when used for such type of strip-lining it allows the painting to be stretched on a special frame by applying gentle pressure. The joint can also be slightly reinforced by applying some linen fibers mixed with the adhesive or by stitching ([fig. 57.1](#fig-57-1)). This method can be especially useful for cases in which the paintings do not have any original margins.
 
-{% figuregroup '2' 'fig-57-1-a, fig-57-1-b' '**Figure 57.1** Vladimir Tatlin (Russian, 1885–1953), *Still-Life with Melon and Apples/Green Leaves in a Jar*, 1912. Oil on canvas, 77 × 67 cm (30 1/3 × 26 3/8 in.). Moscow, Russian State Archives of Literature and Art. (a) Fragment before treatment. (b) Fragment after the tear was fixed with PVB solution and reinforced with stitching. Images: Russian State Archives of Literature and Art' %}
+{% figuregroup '2' 'fig-57-1-a, fig-57-1-b' '**Figure 57.1** Vladimir Tatlin (Russian, 1885–1953), *Still-Life with Melon and Apples/Green Leaves in a Jar*, 1912. Oil on canvas, 77 × 67 cm (30 1/3 × 26 3/8 in.). Moscow, Russian State Archives of Literature and Art. (a) Fragment before treatment. (b) Fragment after the tear was fixed with PVB solution and reinforced with stitching. Images: Russian State Archives of Literature and Art' 'pdf-two-column pdf-float-top' %}
 
 ## Stretchers
 
@@ -51,7 +51,7 @@ According to modern conservation standards, new stretchers must be extensible, a
 
 *New Village*, by Andrey Vasnetsov (1924–2009), had been kept unstretched in the storage of Abramtsevo museum-reserve for a few decades. Each side of the canvas was painted with a finished landscape, oriented in a different direction. One of these paintings is also approximately 10 centimeters larger than the other ([fig. 57.2](#fig-57-2)). The painting was brought to our institution for research and restoration. Conservators consolidated the matte paint layer with copolymer of polyvinyl acetate with ethylene ({% cite 'Fedoseeva et al. 2016' '88' %}). Then strip-lining was performed. In this particular case, we didn’t have to attach new linen margins thread-by-thread because one of the paintings was slightly smaller, so there was enough space to do a traditional variant with an overlap. After these operations, the painting had to be stretched.
 
-{% figure 'fig-57-2' %}
+{% figure 'fig-57-2' 'pdf-float-top' %}
 
 Conservator Artyom Romanov developed a system for doing so that was influenced by a constant tension system suggested by Barry B. Bauman of the Chicago Conservation Center. In 1982, Bauman designed a device for stretching and framing a double-sided painting that had an adjustable spring mechanism to ensure continuous canvas tension ({% cite 'Bauman 1982' %}). In our case, the museum and conservators decided to make the system manually controllable ([fig. 57.3](#fig-57-3)). The stretcher for *New Village* consisted, in fact, of two frames. The inner, extensile one, to which the painting was attached, had furniture bushings around the perimeter on its side ends. The outer frame, with rigidly fixed edges, had tension screws that moved forward and backward toward the bushings and changed the tension by pulling and pushing the inner frame ({% cite 'Romanov 2013' %}). Instead of springs and wall grips, the screws went directly into the furniture bushings. The number of tension screws may vary depending on the size of the picture and the condition of canvas. In this particular case, a linen sackcloth with a weaving density of about 8 by 8 threads per square centimeter was used as the painting support. For the smaller stretcher, Romanov installed bushing in threes on the long sides and in pairs on the shorter ones.
 
