--- a/content/viii-posters/59.md
+++ b/content/viii-posters/59.md
@@ -68,9 +68,9 @@ Yarns extracted from the textile used for each model were used. They were laid b
 
 The results obtained are shown in [table 59.1](#table-59-1). The N45 magnets measuring 20 × 10 × 2 mm were selected for their dimensional characteristics, which better adapt to the magnetic system of the frame. These magnets have approximately 20.6 N in direct contact with each other, and when used to tension the thread, they produce a maximum tension of 2.64 N. As shown in [table 59.2](#table-59-2), after the intervention with the neodymium magnets on the models, a tension of between 2.8 and 3.5 N/cm was achieved. This tension was kept constant after twenty-four hours of having been subjected to RH oscillations. Therefore, this is an adequate tension for the desired conditions during conservation of paintings.
 
-{% figure 'table-59-1' %}
+{% figure 'table-59-1' 'pdf-float-top pdf-one-and-quarter-inch-bottom-margin' %}
 
-{% figure 'table-59-2' 'is-table-scale-7' %}
+{% figure 'table-59-2' 'is-table-scale-7 pdf-float-top' %}
 
 ### Thread-by-Thread Suture
 
@@ -94,16 +94,16 @@ The first painting was an eighteenth-century representation of the Virgin and Ch
 
 The adhesive was chosen for suturing thread by thread: 10% starch paste and 20% sturgeon glue in water (1:1). Natural linen threads 2297, 170 g/m², were used and maintained at a tension of 1 N/cm thanks to the IAFMS ([fig. 59.3](#fig-59-3)). At the end of the operation, the textile support showed a tension of 3.2 N/cm in the treated area. For the reinforcement bridges, the same natural linen threads were used, but impregnated with Plextol B500. The tension applied with Q-20-10-02-N magnets and the IAFMS was 1.5 N/cm. Once the treatment was finished, the treated area maintained a tension value of 3.0 N/cm.
 
-{% figure 'fig-59-3' 'pdf-two-column pdf-float-top pdf-no-bottom-border' %}
-
 ### Case Study 2
 
 The second work was an oil painting on cotton cloth, dating from the twentieth century, whose motif is a still life. It is supported with a taffeta ligament, is industrially prepared, and measures 98 × 48.5 cm.
 
 Cotton fabric threads, 320 g/m² ([fig. 59.4](#fig-59-4)), were used, along with 10% starch paste and 20% sturgeon glue in water (1:1) as adhesive for the textile intarsia. Because a water-based adhesive was used, small dots were applied to the ends of each thread. The tension of the new threads was 1 N/cm, and after the operation was completed, the treated area had a tension of 3.5 N/cm.
 
-{% figure 'fig-59-4' 'pdf-two-column pdf-float-top' %}
+{% figure 'fig-59-3' 'pdf-two-column pdf-no-bottom-border' %}
 
-## Conclusions
+{% figure 'fig-59-4' 'pdf-two-column' %}
+
+## Conclusions {.pdf-page-break-before}
 
 Experimental tests demonstrate the validity of using neodymium magnets as an alternative to traditional procedures in the conservation of painted fabric supports. The magnetic IAFMS allows one to make treatments of sutures thread-by-thread or using textile intarsia, or thread-bridge reinforcement, minimizing the manipulation of the work and with it the risks. It is important to remember that the method of assembly of the magnetic system, the holding and tension force, and the size and weight of the magnets are factors that must be evaluated by the restorer. This method is simple, low-cost, effective, reversible, and respectful of the original work of art.
