--- a/content/viii-posters/61.md
+++ b/content/viii-posters/61.md
@@ -56,7 +56,7 @@ After removing the tape and Tyvek, removal of the stretcher was initiated. Withi
 
 {% figure 'fig-61-2' %}
 
-{% figure 'fig-61-3' %}
+{% figure 'fig-61-3' 'pdf-float-top' %}
 
 
 It was also noticed that at the time of previous conservation activity, extra unpainted edge areas had been removed and original painted portions were used as fold-over edges and nailed through to attach the canvas to the stretcher. Therefore, the exact dimensions of the painting at the time of execution are unknown.
@@ -77,7 +77,7 @@ An experiment of overlapping the sailcloth on every corner was conducted, where 
 
 In some places where termites had ingested the canvas fiber entirely, a layer of splintered cotton wool fiber with Beva 371 binder and thin synthetic cloth was applied to maintain an equal level with nearby areas. The termite-damaged area was repaired sufficiently by applying two larger vertical patches and four smaller ones. The same adhesive and patch material was used for all support additions. After completion of all additions, the whole strip-lining was executed successfully ([fig. 61.5](#fig-61-5)).
 
-{% figure 'fig-61-5' %}
+{% figure 'fig-61-5' 'pdf-float-top' %}
 
 The second phase of conservation started with necessary cleaning and repairing of the stretcher by removing the nails, followed by applying a loose-lining and then restretching the painting. In line with our decision to apply the loose-lining, a market survey was carried out to find a wide, starch-free cloth. Ultimately, a cloth fitting our requirements was found at Burra Bazar Cotton Street, in Kolkata. One vertical seam was necessary to get the required dimension, and then the loose-lining was completed.
 
