Add short titles

--- a/content/ii-present-practice/13.md
+++ b/content/ii-present-practice/13.md
@@ -1,7 +1,7 @@
 ---
 label: "13"
 title: "Lining as a Last Resort for a Large-Format Canvas Painting of the Early Nineteenth Century"
-short_title: "Lining as a Last Resort for a Large-Format Canvas"
+short_title: "Lining as a Last Resort"
 layout: essay
 order: 130
 contributor:
