--- a/content/iii-open-questions/19.md
+++ b/content/iii-open-questions/19.md
@@ -1,7 +1,7 @@
 ---
 label: "19"
 title: "The Influence of Research and Innovative Development on Laboratory Practice in the Structural Treatment of Paintings over Four Decades"
-short_title: "Research and Development on the Structural Treatment of Paintings"
+short_title: "The Structural Treatment of Paintings over Four Decades"
 layout: essay
 order: 190
 contributor:
