--- a/content/iii-open-questions/21.md
+++ b/content/iii-open-questions/21.md
@@ -2,6 +2,7 @@
 label: "21"
 title: "Mehra’s Eight Requirements for Linings, Revisited"
 subtitle: "Evaluation of Linings for Canvas Paintings—Then and Now"
+short_title: "Mehra’s Eight Requirements for Linings"
 layout: essay
 order: 210
 contributor:
