--- a/content/iv-case-studies/22.md
+++ b/content/iv-case-studies/22.md
@@ -2,6 +2,7 @@
 label: "22"
 title: "*Self-Portrait as Saint Catherine of Alexandria* by Artemisia Gentileschi"
 subtitle: "A Recent Glue-Paste Relining Treatment at the National Gallery, London"
+short_title: "*Self-Portrait as Saint Catherine of Alexandria*"
 layout: essay
 order: 220
 contributor:
