--- a/content/iv-case-studies/25.md
+++ b/content/iv-case-studies/25.md
@@ -2,7 +2,7 @@
 label: "25"
 title: "Issues with Congolese Paintings in Belgium’s Africa Museum"
 subtitle: "Condition Assessment and Research in Transparent Lining"
-short_title: "Issues of the African Paintings Collection"
+short_title: "Issues with Paintings in Belgium’s Africa Museum"
 layout: essay
 order: 250
 contributor:
