--- a/content/v-adhesives/27.md
+++ b/content/v-adhesives/27.md
@@ -2,6 +2,7 @@
 label: "27"
 title: "Nanocellulose and Multilayered Nanoparticles in Paintings Conservation"
 subtitle: "Introduction of New Materials for Canvas Consolidation and a Novel Multiscale Approach for Their Assessment"
+short_title: "Nanocellulose and Multilayered Nanoparticles"
 layout: essay
 order: 270
 contributor:
