--- a/content/vi-interventions/30.md
+++ b/content/vi-interventions/30.md
@@ -2,6 +2,7 @@
 label: "30"
 title: "Targeted Strategies for Structural Treatments"
 subtitle: "The Law of the Instrument, Occam’s Razor, and Minimal Intervention"
+short_title: "Targeted Strategies for Structural Treatments"
 layout: essay
 order: 300
 contributor:
