--- a/content/vi-interventions/35.md
+++ b/content/vi-interventions/35.md
@@ -1,7 +1,7 @@
 ---
 label: "35"
 title: "The Impact of a Major Flood on Relined and Transferred Paintings from the Musée Girodet in Montargis, France, and the Conservation That Followed"
-short_title: "Impact of a Major Flood on Paintings from the Musée Girodet"
+short_title: "Impact of a Flood on Paintings from the Musée Girodet"
 layout: essay
 order: 350
 contributor:
