--- a/content/vii-modern-contemporary/38.md
+++ b/content/vii-modern-contemporary/38.md
@@ -2,6 +2,7 @@
 label: "38"
 title: "The Structural Treatment of Modern and Contemporary Canvas Paintings"
 subtitle: "Changing Approaches and Considerations"
+short_title: "Modern and Contemporary Canvas Paintings"
 layout: essay
 order: 380
 contributor:
