--- a/content/vii-modern-contemporary/39.md
+++ b/content/vii-modern-contemporary/39.md
@@ -1,7 +1,7 @@
 ---
 label: "39"
 title: "Wax-Resin Extraction Traction on a Late Georges Braque Still Life"
-short_title: "Wax-Resin Extraction on a Braque Still Life"
+short_title: "Wax-Resin Extraction Traction on a Braque Still Life"
 layout: essay
 order: 390
 contributor:
