--- a/content/vii-modern-contemporary/40.md
+++ b/content/vii-modern-contemporary/40.md
@@ -1,7 +1,7 @@
 ---
 label: "40"
 title: "Local Treatments of Cupped Cracks in Contemporary Paintings and Their Appearance after Twenty-One Years"
-short_title: "Local Treatments of Cupped Cracks After Twenty-One Years"
+short_title: "Local Treatments of Cupped Cracks"
 layout: essay
 order: 400
 contributor:
