--- a/content/viii-posters/42.md
+++ b/content/viii-posters/42.md
@@ -2,7 +2,7 @@
 label: "42"
 title: "The Greenwich Conference on Comparative Lining Techniques, April 23, 24, and 25, 1974"
 subtitle: "Three Days That Changed Conservation"
-short_title: "The Greenwich Conference: Three Days That Changed Conservation"
+short_title: "The Greenwich Conference"
 layout: essay
 order: 420
 contributor:
