--- a/content/viii-posters/47.md
+++ b/content/viii-posters/47.md
@@ -1,7 +1,7 @@
 ---
 label: "47"
 title: "A System to Keep Paintings on Canvas at a Constant Tension during Conservation Treatment"
-short_title: "A System to Keep Paintings at Constant Tension during Treatment"
+short_title: "A System to Keep Paintings at Constant Tension"
 layout: essay
 order: 470
 contributor:
