--- a/content/viii-posters/49.md
+++ b/content/viii-posters/49.md
@@ -2,7 +2,7 @@
 label: "49"
 title: "Analysis of Evolon CR as a Poulticing Agent for Wax-Resin Lining Adhesives"
 subtitle: "Py-GCMS, BET, and SEM Analyses of Used Evolon CR Tissues"
-short_title: "Evolon CR as a Poultice for Wax-Resin Lining Adhesives"
+short_title: "Analysis of Evolon CR as a Poulticing Agent"
 layout: essay
 order: 490
 contributor:
