--- a/content/viii-posters/51.md
+++ b/content/viii-posters/51.md
@@ -1,7 +1,7 @@
 ---
 label: "51"
 title: "An Insight into the Limits and Possibilities of the Biological, Chemical, and Mechanical Performance of Glue-Paste Lined Paintings"
-short_title: "An Insight into the Limits and Possibilities of the Performance of Glue-Paste Lined Paintings"
+short_title: "The Performance of Glue-Paste Lined Paintings"
 layout: essay
 order: 510
 contributor:
