--- a/content/viii-posters/52.md
+++ b/content/viii-posters/52.md
@@ -2,6 +2,7 @@
 label: "52"
 title: "The Structural Treatment of Titian’s *Rape of Europa*"
 subtitle: "Extending the Life of a Two-Hundred-Year-Old Glue-Paste Lining"
+short_title: "Structural Treatment of Titian’s *Rape of Europa*"
 layout: essay
 order: 520
 contributor:
