--- a/content/viii-posters/54.md
+++ b/content/viii-posters/54.md
@@ -1,6 +1,7 @@
 ---
 label: "54"
 title: "Evaluating Structural Treatment Options for an Untensioned Oil Painting on Canvas"
+short_title: "Evaluating Structural Treatment Options"
 layout: essay
 order: 540
 contributor:
