--- a/content/viii-posters/56.md
+++ b/content/viii-posters/56.md
@@ -1,6 +1,7 @@
 ---
 label: "56"
 title: "An Approach to Conservation Treatment Options for Double-Sided Painted Canvases with Ritual Functions"
+short_title: "Double-Sided Painted Canvases"
 layout: essay
 order: 560
 contributor:
