--- a/content/viii-posters/57.md
+++ b/content/viii-posters/57.md
@@ -1,6 +1,7 @@
 ---
 label: "57"
 title: "The Challenges of Treating and Displaying Two-Sided Oil Paintings"
+short_title: "Treating and Displaying Two-Sided Oil Paintings"
 layout: essay
 order: 570
 contributor:
