--- a/content/viii-posters/59.md
+++ b/content/viii-posters/59.md
@@ -2,7 +2,7 @@
 label: "59"
 title: "Magnetic Systems as an Alternative to Traditional Methods for the Conservation-Restoration of Painted Canvas Supports"
 subtitle: "A Proposal of Minimal Intervention Protocols"
-short_title: "Magnetic Systems as an Alternative to Traditional Methods"
+short_title: "Magnetic Systems as an Alternative"
 layout: essay
 order: 590
 contributor:
