--- a/content/viii-posters/60.md
+++ b/content/viii-posters/60.md
@@ -1,7 +1,7 @@
 ---
 label: "60"
 title: "Structural Conservation Issues with European Easel Paintings Housed in High-Humidity Regions Such as Mumbai, India"
-short_title: "Structural Conservation Issues with Paintings in High-Humidity Regions"
+short_title: "Paintings in High-Humidity Regions"
 layout: essay
 order: 600
 contributor:
