--- a/content/viii-posters/62.md
+++ b/content/viii-posters/62.md
@@ -1,6 +1,7 @@
 ---
 label: "62"
 title: "Investigating Commercially Primed Contemporary Artist Canvases"
+shrt_title: "Commercially Primed Contemporary Artist Canvases"
 layout: essay
 order: 620
 contributor:
