--- a/content/viii-posters/63.md
+++ b/content/viii-posters/63.md
@@ -1,7 +1,8 @@
 ---
 label: "63"
 title: "Stabilization Processing of Canvas Paintings Damaged by Tsunami"
-subtitle: "Consideration of Blotter Washing to Acrylic Paintings on Cotton Canvas "
+subtitle: "Consideration of Blotter Washing to Acrylic Paintings on Cotton Canvas"
+short_title: "Canvas Paintings Damaged by Tsunami"
 layout: essay
 order: 630
 contributor:
