--- a/content/iv-case-studies/23.md
+++ b/content/iv-case-studies/23.md
@@ -1,7 +1,7 @@
 ---
 label: "23"
 title: "Conserving the History and Fabric of the New Bedford Whaling Museum’s *Grand Panorama of a Whaling Voyage ’Round the World*"
-short_title: "Conserving the *Grand Panorama of a Whaling Voyage ’Round the World*"
+short_title: "Conserving the *Grand Panorama*"
 layout: essay
 order: 230
 contributor:
