--- a/content/viii-posters/45.md
+++ b/content/viii-posters/45.md
@@ -1,6 +1,7 @@
 ---
 label: "45"
 title: "On Color Change in Seventeenth-Century Netherlandish Paintings after Wax-Resin Lining"
+short_title: "On Color Change"
 layout: essay
 order: 450
 contributor:
