--- a/content/ii-present-practice/9.md
+++ b/content/ii-present-practice/9.md
@@ -162,7 +162,7 @@ The idea that the original canvas will never be the same again after a lining is
 
 2015–18: Workshops for professions at M. A. Vrubel Museum, Omsk (2015); Indira Gandhi National Centre for the Arts, New Delhi (2016); Indian National Trust for Art and Cultural Heritage, Kolkata (2016); the State Tretyakov Gallery, Moscow (2018); and Brera Academy of Fiine Art, Arcore, Milan (2022)
 
-2019–23: Getty Foundation, Conserving Canvas initiative, Mist-Lining Workshop (2019); Pilot Virtual Online Mist-Lining Workshop (2021); and Regional Mist-Lining workshop (2023)
+2019–23: Getty Foundation, Conserving Canvas initiative, Mist-Lining Workshop (2019); Pilot Virtual Online Mist-Lining Workshop (2021); and Regional Mist-Lining Workshop (2023)
 
 {% backmatter %}
 
